Tussen titel toegevoegd

--- a/index.html
+++ b/index.html
@@ -190,8 +190,9 @@
                             <div class="card-white">
                                 <h3 class="text-blue">Namiddagsessies</h3>
                                 <p>
-                                    In de namiddag gaan we, in lijn met de filosofie van de City of People, samen aan de slag. Lokale stakeholders zullen hun plan van aanpak pitchen voor een toekomstig probleem voor Gent: klimaat, onderwijs, superdiversiteit, efficiënt gebruik van ruimte, wonen, zorg, sociale cohesie, participatie… komen aan bod. In kleinere groepen gaan we interactief, en onder begeleiding van experts, aan de slag om zelf met oplossingen te komen. 
+                                    Lokale stakeholders zullen hun plan van aanpak pitchen voor een toekomstig probleem voor Gent: klimaat, onderwijs, superdiversiteit, efficiënt gebruik van ruimte, wonen, zorg, sociale cohesie, participatie… komen aan bod. In kleinere groepen gaan we interactief, en onder begeleiding van experts, aan de slag om zelf met oplossingen te komen. 
                                 </p>
+                                <h3 class="text-blue">Natraject</h3>
                                 <p>
                                     Tijdens de conferentie kan u zich ook kandidaat stellen om mee te stappen in een ‘Future Scripting’-traject, waarbij we via innovatieve gamification-methoden en creatieve oefeningen vier verschillende mogelijke scenario’s over mogelijke toekomsten van Gent zullen schrijven. De oefening wordt begeleid door het team van Maya Van Leemput. 
  
