--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                                     Op Foreplay kijken we in de spiegel. <b>Aral Balkan</b>, cyberactivist en ethisch ondernemer, confronteert ons met hoe we vandaag omgaan met technologie en met onze persoonlijke data. Facebook en Google worden er rijk en slimmer door. Maar willen we dat wel? Hoe zou de toekomst zijn, wanneer we zo verder doen? Wat kan anders?
                                 </p>
                                 <h3 class="text-blue">Karl-Filip Coenegrachts</h3>
-                                <p>Tegenwoordig is het modewoord ‘Smart City’. De Gentse visie daarop is die van de ‘City of People’: mensen centraal, niet sensoren. Op Foreplay vertelt Karl Filip Coenegrachts, Strategisch Coördinator van Groep Gent, wat die visie voor u betekent; als ambtenaar, ondernemer, academicus en burger. We presenteren er een toekomstvisie op de slimme stad. 
+                                <p>Tegenwoordig is het modewoord ‘Smart City’. De Gentse visie daarop is die van de ‘City of People’: mensen centraal, niet sensoren. Op Foreplay vertelt <b>Karl Filip Coenegrachts</b>, Strategisch Coördinator van Groep Gent, wat die visie voor u betekent; als ambtenaar, ondernemer, academicus en burger. We presenteren er een toekomstvisie op de slimme stad. 
                                 </p>
                             </div>
                         </div>
@@ -178,11 +178,11 @@
                             <div class="card-white">
                                <h3 class="text-blue">Maya Van Leemput</h3>
                                 <p>
-                                   Is alles wat technologie mogelijk maakt ook wenselijk? Wat is onze toegevoegde waarde als mens in een samenleving waarin we steeds meer kunnen uitbesteden aan technologie? Maya Van Leemput, coördinator van Applied Futures Research, toont het belang van toekomstdenken in de ‘vierde industriële revolutie’.
+                                   Is alles wat technologie mogelijk maakt ook wenselijk? Wat is onze toegevoegde waarde als mens in een samenleving waarin we steeds meer kunnen uitbesteden aan technologie? <b>Maya Van Leemput</b>, coördinator van Applied Futures Research, toont het belang van toekomstdenken in de ‘vierde industriële revolutie’.
                                 </p>
                                 <h3 class="text-blue">prof. Maarten Hajer</h3>
                                 <p>
-                                    Op Foreplay verkennen we mogelijke strategieën om in te pluggen op het ecosysteem vol plannen en ideeën dat de stad eigenlijk is. We bedenken pistes om die samenwerking vanuit de overheid mee uit te bouwen. Prof. Maarten Hajer, coördinator van Urban Futures, geeft zijn visie op het belang van duurzaam, ethisch en sociaal ondernemerschap in het ecosysteem van de stad van de toekomst.
+                                    Op Foreplay verkennen we mogelijke strategieën om in te pluggen op het ecosysteem vol plannen en ideeën dat de stad eigenlijk is. We bedenken pistes om die samenwerking vanuit de overheid mee uit te bouwen. <b>Prof. Maarten Hajer</b>, coördinator van Urban Futures, geeft zijn visie op het belang van duurzaam, ethisch en sociaal ondernemerschap in het ecosysteem van de stad van de toekomst.
                                 </p>
                             </div>
                         </div>
@@ -190,7 +190,7 @@
                             <div class="card-white">
                                 <h3 class="text-blue">Namiddagsessies</h3>
                                 <p>
-                                    Lokale stakeholders zullen hun plan van aanpak pitchen voor een toekomstig probleem voor Gent: klimaat, onderwijs, superdiversiteit, efficiënt gebruik van ruimte, wonen, zorg, sociale cohesie, participatie… komen aan bod. In kleinere groepen gaan we interactief, en onder begeleiding van experts, aan de slag om zelf met oplossingen te komen. 
+                                    Lokale stakeholders zullen hun plan van aanpak pitchen voor een toekomstig probleem voor Gent: <b>klimaat, onderwijs, superdiversiteit, efficiënt gebruik van ruimte, wonen, zorg, sociale cohesie, participatie</b>… komen aan bod. In kleinere groepen gaan we interactief, en onder begeleiding van experts, aan de slag om zelf met oplossingen te komen. 
                                 </p>
                                 <h3 class="text-blue">Natraject</h3>
                                 <p>
@@ -214,8 +214,8 @@
                         <h4 class="text-center text-yellow">KLIK VOOR MEER INFORMATIE</h4>
                         <div class="partner-logos">
                             <a data-toggle="modal" data-target="#spreker1"><img src="assets/pictures/kc.jpg" height="200px"></a>
-                          <!--  <a data-toggle="modal" data-target="#spreker2"><img src="http://placehold.it/200x200" height="200px"></a>
-                            <a data-toggle="modal" data-target="#spreker3"><img src="http://placehold.it/200x200" height="200px"></a> -->
+                            <a data-toggle="modal" data-target="#spreker2"><img src="assets/pictures/kc.jpg" height="200px"></a>
+                            <a data-toggle="modal" data-target="#spreker3"><img src="assets/pictures/kc.jpg" height="200px"></a>
                             <a data-toggle="modal" data-target="#spreker4"><img src="assets/pictures/haj.jpg" height="200px"></a>
                         </div>
                         <!-- sprekers modals-->
@@ -224,14 +224,11 @@
                                 <div class="modal-content">
                                     <div class="modal-header">
                                         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                                        <h4 class="modal-title" id="myModalLabel">Karl-Filip Coenegrachts - Strategisch Coördinator Groep Gent</h4>
+                                        <h4 class="modal-title" id="myModalLabel">Aral Balkan - Ethisch designer - Cyborg Activist</h4>
                                     </div>
                                     <div class="modal-body">
                                         <p>
-                                            Karl-Filip Coenegrachts is Strategisch Coördinator voor Groep Gent, trekker van de visie ‘Ghent, City of People’ en van het Ghent Living Lab.
-                                        </p>
-                                        <p>
-                                            Karl-Filip Coenegrachts stelt de huidige smart-city visie van de stad voor. In die visie staan de noden van de Gentse burgers centraal, en is technologie een middel om hieraan tegemoet te komen. Daarnaast spreekt hij ook over de rol van de overheid, en haar relatie met technologie en samenleving.
+                                            <b>Aral Balkan</b> is ethisch ontwerper, cyborg-activist en wereldburger. Als professioneel spreker (oa. TED, The Next Web) reist hij de wereld rond. Balkan streeft naar het creëren van onafhankelijke en democratische technologie; met respect voor privacy en het gebruik van iemands persoonlijke data. Hij waarschuwt voor het ‘Silicon Valley-business model’ en pleit voor doorgedreven decentrale en ‘Open Source’-alternatieven. 
                                         </p>
                                     </div>
                                     <div class="modal-footer">
@@ -239,17 +236,16 @@
                                 </div>
                             </div>
                         </div>
-                  <!--      <div class="modal fade" id="spreker2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                  <div class="modal fade" id="spreker2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
                             <div class="modal-dialog" role="document">
                                 <div class="modal-content">
                                     <div class="modal-header">
                                         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                                        <h4 class="modal-title" id="myModalLabel">Spreker 2</h4>
+                                        <h4 class="modal-title" id="myModalLabel">Karl-Filip Coenegrachts - Strategisch Coördinator Groep Gent</h4>
                                     </div>
                                     <div class="modal-body">
-                                        <p>Uitleg spreker 2</p>
                                         <p>
-                                            So, too, with some other feeding grounds, where he had at times revealed himself. But all these seemed only his casual stopping-places and ocean-inns, so to speak, not his places of prolonged abode. And where Ahab's chances of accomplishing his object have hitherto been spoken of, allusion has only been made to whatever way-side, antecedent, extra prospects were his, ere a particular set time or place were attained, when all possibilities would become probabilities, and, as Ahab fondly thought, every possibility the next thing to a certainty. That particular set time and place were conjoined in the one technical phrase&mdash;the Season-on-the-Line.
+                                            Karl-Filip Coenegrachts is Strategisch Coördinator voor Groep Gent, trekker van de visie ‘Ghent, City of People’ en van het Ghent Living Lab. Als Strategisch Coördinator is Coenegrachts verantwoordelijke voor de langetermijnstrategie voor Groep Gent, de smart city-strategie, data-en informatiemanagement, internationale relaties en beleidsparticipatie. Coenegrachts vertegenwoordigt Gent als voorzitter van het Executive Committee van het Eurocities-netwerk.
                                         </p>
                                     </div>
                                     <div class="modal-footer">
@@ -267,14 +263,17 @@
                                     <div class="modal-body">
                                         <p>Uitleg spreker 3</p>
                                         <p>
-                                            So, too, with some other feeding grounds, where he had at times revealed himself. But all these seemed only his casual stopping-places and ocean-inns, so to speak, not his places of prolonged abode. And where Ahab's chances of accomplishing his object have hitherto been spoken of, allusion has only been made to whatever way-side, antecedent, extra prospects were his, ere a particular set time or place were attained, when all possibilities would become probabilities, and, as Ahab fondly thought, every possibility the next thing to a certainty. That particular set time and place were conjoined in the one technical phrase&mdash;the Season-on-the-Line.
+                                            Dr. Maya Van Leemput is professioneel futurist, senior onderzoeker in toekomststudies en hoofd van de onderzoeksgroep ‘Applied Futures Research | Open Time’ van de Erasmus Hogeschool Brussel. Van Leemput specialiseert zich in foresight op het vlak van wetenschap, technologie, kunst en ontwikkeling.
+                                        </p>
+                                        <p>
+                                            Maya Van Leemput is curator van ‘A Temporary Futures Institute’, een tentoonstelling met verbeeldingen van mogelijke toekomsten - momenteel te bezichtigen in het MHKA. Van Leemput is tevens lid van de World Futures Studies Federation en van de Association of Professional Futurists. Zij begeleidt Digipolis Gent bij een Future Scripting-traject, in het najaar van 2017. 
                                         </p>
                                     </div>
                                     <div class="modal-footer">
                                     </div>
                                 </div>
                             </div>
-                        </div>-->
+                        </div>
                         <div class="modal fade" id="spreker4" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
                             <div class="modal-dialog" role="document">
                                 <div class="modal-content">
