Added new Hajer

--- a/index.html
+++ b/index.html
@@ -213,9 +213,9 @@
                         <h2 class="text-center text-yellow">KEYNOTE SPREKERS</h2>
                         <h4 class="text-center text-yellow">KLIK VOOR MEER INFORMATIE</h4>
                         <div class="partner-logos">
-                            <a data-toggle="modal" data-target="#spreker1"><img src="assets/pictures/kc.jpg" height="200px"></a>
+                            <a data-toggle="modal" data-target="#spreker1"><img src="assets/pictures/aral.jpg" height="200px"></a>
                             <a data-toggle="modal" data-target="#spreker2"><img src="assets/pictures/kc.jpg" height="200px"></a>
-                            <a data-toggle="modal" data-target="#spreker3"><img src="assets/pictures/kc.jpg" height="200px"></a>
+                            <a data-toggle="modal" data-target="#spreker3"><img src="assets/pictures/maya.jpg" height="200px"></a>
                             <a data-toggle="modal" data-target="#spreker4"><img src="assets/pictures/haj.jpg" height="200px"></a>
                         </div>
                         <!-- sprekers modals-->
