--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                                     Op Foreplay kijken we in de spiegel. <b>Aral Balkan</b>, cyberactivist en ethisch ondernemer, confronteert ons met hoe we vandaag omgaan met technologie en met onze persoonlijke data. Facebook en Google worden er rijk en slimmer door. Maar willen we dat wel? Hoe zou de toekomst zijn, wanneer we zo verder doen? Wat kan anders?
                                 </p>
                                 <h3 class="text-blue">Karl-Filip Coenegrachts</h3>
-                                <p>Tegenwoordig is het modewoord ‘Smart City’. De Gentse visie daarop is die van de ‘City of People’: mensen centraal, niet sensoren. Op Foreplay vertelt <b>Karl Filip Coenegrachts</b>, Strategisch Coördinator van Groep Gent, wat die visie voor u betekent; als ambtenaar, ondernemer, academicus en burger. We presenteren er een toekomstvisie op de slimme stad. 
+                                <p>Tegenwoordig is het modewoord ‘Smart City’. De Gentse visie daarop is die van de ‘City of People’: mensen centraal, niet sensoren. Op Foreplay vertelt <b>Karl Filip Coenegrachts</b>, Strategisch Coördinator van Groep Gent, wat die visie voor u betekent; als ambtenaar, ondernemer, academicus en burger. We presenteren er een toekomstvisie op de slimme stad.
                                 </p>
                             </div>
                         </div>
@@ -190,12 +190,12 @@
                             <div class="card-white">
                                 <h3 class="text-blue">Namiddagsessies</h3>
                                 <p>
-                                    Lokale stakeholders zullen hun plan van aanpak pitchen voor een toekomstig probleem voor Gent: <b>klimaat, onderwijs, superdiversiteit, efficiënt gebruik van ruimte, wonen, zorg, sociale cohesie, participatie</b>… komen aan bod. In kleinere groepen gaan we interactief, en onder begeleiding van experts, aan de slag om zelf met oplossingen te komen. 
+                                    Lokale stakeholders zullen hun plan van aanpak pitchen voor een toekomstig probleem voor Gent: <b>klimaat, onderwijs, superdiversiteit, efficiënt gebruik van ruimte, wonen, zorg, sociale cohesie, participatie</b>… komen aan bod. In kleinere groepen gaan we interactief, en onder begeleiding van experts, aan de slag om zelf met oplossingen te komen.
                                 </p>
                                 <h3 class="text-blue">Natraject</h3>
                                 <p>
-                                    Tijdens de conferentie kan u zich ook kandidaat stellen om mee te stappen in een ‘Future Scripting’-traject, waarbij we via innovatieve gamification-methoden en creatieve oefeningen vier verschillende mogelijke scenario’s over mogelijke toekomsten van Gent zullen schrijven. De oefening wordt begeleid door het team van Maya Van Leemput. 
- 
+                                    Tijdens de conferentie kan u zich ook kandidaat stellen om mee te stappen in een ‘Future Scripting’-traject, waarbij we via innovatieve gamification-methoden en creatieve oefeningen vier verschillende mogelijke scenario’s over mogelijke toekomsten van Gent zullen schrijven. De oefening wordt begeleid door het team van Maya Van Leemput.
+
                                 </p>
                             </div>
                         </div>
@@ -228,7 +228,7 @@
                                     </div>
                                     <div class="modal-body">
                                         <p>
-                                            <b>Aral Balkan</b> is ethisch ontwerper, cyborg-activist en wereldburger. Als professioneel spreker (oa. TED, The Next Web) reist hij de wereld rond. Balkan streeft naar het creëren van onafhankelijke en democratische technologie; met respect voor privacy en het gebruik van iemands persoonlijke data. Hij waarschuwt voor het ‘Silicon Valley-business model’ en pleit voor doorgedreven decentrale en ‘Open Source’-alternatieven. 
+                                            <b>Aral Balkan</b> is ethisch ontwerper, cyborg-activist en wereldburger. Als professioneel spreker (oa. TED, The Next Web) reist hij de wereld rond. Balkan streeft naar het creëren van onafhankelijke en democratische technologie; met respect voor privacy en het gebruik van iemands persoonlijke data. Hij waarschuwt voor het ‘Silicon Valley-business model’ en pleit voor doorgedreven decentrale en ‘Open Source’-alternatieven.
                                         </p>
                                     </div>
                                     <div class="modal-footer">
@@ -258,15 +258,14 @@
                                 <div class="modal-content">
                                     <div class="modal-header">
                                         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                                        <h4 class="modal-title" id="myModalLabel">Spreker 3</h4>
+                                        <h4 class="modal-title" id="myModalLabel">Maya Van Leemput - Futurist - Hoofd Applied Futures Research EHB</h4>
                                     </div>
                                     <div class="modal-body">
-                                        <p>Uitleg spreker 3</p>
                                         <p>
                                             Dr. Maya Van Leemput is professioneel futurist, senior onderzoeker in toekomststudies en hoofd van de onderzoeksgroep ‘Applied Futures Research | Open Time’ van de Erasmus Hogeschool Brussel. Van Leemput specialiseert zich in foresight op het vlak van wetenschap, technologie, kunst en ontwikkeling.
                                         </p>
                                         <p>
-                                            Maya Van Leemput is curator van ‘A Temporary Futures Institute’, een tentoonstelling met verbeeldingen van mogelijke toekomsten - momenteel te bezichtigen in het MHKA. Van Leemput is tevens lid van de World Futures Studies Federation en van de Association of Professional Futurists. Zij begeleidt Digipolis Gent bij een Future Scripting-traject, in het najaar van 2017. 
+                                            Maya Van Leemput is curator van ‘A Temporary Futures Institute’, een tentoonstelling met verbeeldingen van mogelijke toekomsten - momenteel te bezichtigen in het MHKA. Van Leemput is tevens lid van de World Futures Studies Federation en van de Association of Professional Futurists. Zij begeleidt Digipolis Gent bij een Future Scripting-traject, in het najaar van 2017.
                                         </p>
                                     </div>
                                     <div class="modal-footer">
@@ -279,7 +278,7 @@
                                 <div class="modal-content">
                                     <div class="modal-header">
                                         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                                        <h4 class="modal-title" id="myModalLabel">Professor Maarten Haijer</h4>
+                                        <h4 class="modal-title" id="myModalLabel">Maarten Haijer - Hoogeleraar Urban Futures aan de Universiteit van Utrecht</h4>
                                     </div>
                                     <div class="modal-body">
                                         <p>
