--- a/index.html
+++ b/index.html
@@ -73,8 +73,9 @@
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#site-intro">OVER</a></li>
+                    <li><a href="#site-media">PROGRAMMA</a></li>
                     <li><a href="#site-info">SPREKERS</a></li>
-                    <li><a href="#site-programme">PROGRAMMA</a></li>
+                    <li><a href="#site-programme">AGENDA</a></li>
                     <!--<li><a href="faq.html">CODE OF CONDUCT</a></li>-->
                     <li><a class="cta" href="https://foreplaygent.eventbrite.nl">INSCHRIJVEN</a></li>
                 </ul>
@@ -129,14 +130,14 @@
                 <div class="row">
                     <div class="col-xs-12">
                         <div class="col-xs-9 col-sm-9 text-big">
-                            <h1 class="extra-spacing">
-                                FOREPLAY CONFERENTIE
+                            <h1>
+                                FOREPLAY
                             </h1>
+                            <h2>
+                                Technology in the City of People
+                            </h2>
                             <p>
-                              Foreplay onderzoekt, inspireert en durft kritisch zijn over de toekomst van mens, technologie en samenleving in Gent.
-                            </p>
-                            <p>
-                              Foreplay gaat over de toekomst van Gent. Beter gezegd, over verschillende mogelijke toekomsten. Want wat we vandaag beslissen, maakt mee de stad van morgen. Hoe willen we dat onze stad er uitziet, bijvoorbeeld in 2040?
+                             Foreplay inspireert, onderzoekt, speelt met en durft kritisch te zijn over de toekomst van mens, technologie en samenleving in Gent. Foreplay gaat niet over één, maar over diverse mogelijke toekomsten. Want verschillende scenario's zijn mogelijk: wat we vandaag beslissen, maakt mee de stad van morgen. Hoe willen we dat onze stad er uitziet, bijvoorbeeld in 2040? En wat is de plaats van technologie in die toekomsten?
                             </p>
                             <br>
                             <p class="extra-spacing">
@@ -160,8 +161,12 @@
                     </div>
                 </div>
             </div>
+         </div>
+     </div>
+    <div id="site-media">
+        <div class="section bg-gradient"> 
             <div class="container">
-                    <h2 class="text-center text-blue">Sprekers voormiddag</h2>
+                    <h2 class="text-center text-blue">PROGRAMMA</h2>
                     <div class="row info-cards extra-spacing">
                         <div class="col-md-4 col-xs-12">
                             <div class="card-white">
@@ -278,7 +283,7 @@
                                 <div class="modal-content">
                                     <div class="modal-header">
                                         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                                        <h4 class="modal-title" id="myModalLabel">Maarten Haijer - Hoogeleraar Urban Futures aan de Universiteit van Utrecht</h4>
+                                        <h4 class="modal-title" id="myModalLabel">Maarten Hajer - Hoogeleraar Urban Futures aan de Universiteit van Utrecht</h4>
                                     </div>
                                     <div class="modal-body">
                                         <p>
@@ -377,8 +382,8 @@
 -->
 <div id="site-programme" class="section bg-gradient">
         <div class="container">
-            <h2 class="text-center text-blue">PROGRAMMA</h2>
-            <h4 class="text-center">HET DEFINITIEVE PROGRAMMA ZAL LATER WORDEN TOEGEVOEGD</h4 >
+            <h2 class="text-center text-blue">AGENDA</h2>
+            <!--<h4 class="text-center">HET DEFINITIEVE PROGRAMMA ZAL LATER WORDEN TOEGEVOEGD</h4 >-->
             <div class="row">
                 <div class="col-md-6 col-xs-12 timetable">
                     <div class="row">
