--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                                     Op Foreplay kijken we in de spiegel. <b>Aral Balkan</b>, cyberactivist en ethisch ondernemer, confronteert ons met hoe we vandaag omgaan met technologie en met onze persoonlijke data. Facebook en Google worden er rijk en slimmer door. Maar willen we dat wel? Hoe zou de toekomst zijn, wanneer we zo verder doen? Wat kan anders?
                                 </p>
                                 <h3 class="text-blue">Karl-Filip Coenegrachts</h3>
-                                <p>Tegenwoordig is het modewoord ‘Smart City’. De Gentse visie daarop is die van de ‘City of People’: mensen centraal, niet sensoren. Op Foreplay vertelt <b>Karl Filip Coenegrachts</b>, Strategisch Coördinator van Groep Gent, wat die visie voor u betekent; als ambtenaar, ondernemer, academicus en burger. We presenteren er een toekomstvisie op de slimme stad.
+                                <p>Tegenwoordig is het modewoord ‘Smart City’. De Gentse visie daarop is die van de ‘City of People’: mensen centraal, niet slimme objecten. Op Foreplay vertelt <b>Karl Filip Coenegrachts</b>, Strategisch Coördinator van Groep Gent, wat die visie voor u betekent; als ambtenaar, ondernemer, academicus en burger. Coenegrachts presenteert er een toekomstvisie die veel verder gaat dan gewoon een slimme stad. 
                                 </p>
                             </div>
                         </div>
@@ -187,7 +187,7 @@
                                 </p>
                                 <h3 class="text-blue">prof. Maarten Hajer</h3>
                                 <p>
-                                    Op Foreplay verkennen we mogelijke strategieën om in te pluggen op het ecosysteem vol plannen en ideeën dat de stad eigenlijk is. We bedenken pistes om die samenwerking vanuit de overheid mee uit te bouwen. <b>Prof. Maarten Hajer</b>, coördinator van Urban Futures, geeft zijn visie op het belang van duurzaam, ethisch en sociaal ondernemerschap in het ecosysteem van de stad van de toekomst.
+                                    <b>Prof. Maarten Hajer</b> verkent met ons mogelijke strategieën om in te pluggen op het ecosysteem van de stad, dat rijk is aan plannen en ideeën. We bedenken pistes om als overheid deel uit te maken van een sterk en dynamisch netwerk van burgers, academia, ondernemers en middenveld. 
                                 </p>
                             </div>
                         </div>
@@ -499,7 +499,7 @@
                     <div class="row">
                         <div class="col col-xs-10 col-xs-offset-1">
                             <h2 class="text-center text-yellow">Wil jij er ook bijzijn?</h2>
-                            <p class="text-center"> Foreplay richt zich op de hele City of People. We verwelkomen collega’s van bij Stad, OCMW, Digipolis, Mobiliteitsbedrijf, Brandweer, Politie, Musea, IVAGO, AGB’s en alle andere leden. Daarnaast zijn ook ondernemers, academici en alle andere burgers welkom. Kortom: iedereen die verliefd is op Gent, en wil meewerken aan de toekomst van de stad! </p>
+                            <p class="text-center"> Foreplay richt zich op de City of People. We verwelkomen collega’s van bij Stad, OCMW, Digipolis, Mobiliteitsbedrijf, Brandweer, Politie, Musea, IVAGO, AGB’s en alle andere leden. Daarnaast zijn ook ondernemers, academici en andere stakeholders welkom. Kortom: iedereen die verliefd is op Gent, en wil meewerken aan de toekomst van de stad! </p>
                             <p class="text-center">Registratie is gratis maar verplicht.</p>
                             <br>
                             <br>
