Termont wil niet

--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
                             <h4 class="no-uppercase text-azg">9:00</h4>
                         </div>
                         <div class="col-xs-9">
-                            <span>Verwelkoming door Burgemeester Daniël Termont en Schepen Martine De Regge</span>
+                            <span>Verwelkoming door Schepen Martine De Regge</span>
                         </div>
                     </div>
                     <div class="row">
