Added CoC to footer

--- a/index.html
+++ b/index.html
@@ -585,15 +585,14 @@
                     <a href="http://www.stad.gent" target="_blank"><img src="assets/pictures/gent.png" class="footlogo" height="30px"></a>
                 </div>
                 <div class="col col-md-4 footer-mid">
-                    Broncode te vinden op GitHub
-                    <a href="https://github.com/PieterJanPauwels/Foreplay.gent" target="_blank"> <i class="fa fa-github fa-2x footlogo"> </i> </a>
+                    <a href="https://github.com/PieterJanPauwels/Foreplay.gent" target="_blank"> Broncode te vinden op GitHub <i class="fa fa-github fa-2x footlogo"> </i> </a>
                 </div>
                 <div class="col col-md-4 footer-right">
                     <!-- <a href="https://twitter.com/yourtwitter" target="_blank" ><i class="fa fa-twitter fa-2x"></i></a>
                         <a href="https://www.instagram.com/yourinstagram/" target="_blank" ><i class="fa fa-instagram fa-2x"></i></a>
                         <a href="https://www.youtube.com/channel/youryoutube" target="_blank" ><i class="fa fa-youtube fa-2x"></i></a>
                         <a href="https://www.flickr.com/photos/yourflickr/" target="_blank" ><i class="fa fa-flickr fa-2x"></i></a> -->
-                    <a class="hashtag" href="https://twitter.com/hashtag/foreplayconference" target="_blank"><i></i>#foreplayconference</a>
+                    <a href="http://foreplay.gent/coc.html"><i class="fa fa-hand-peace-o fa-2x footlogo"> </i>  Code-of-conduct</a>
                 </div>
             </div>
         </div>
