--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                             <div class="card-white">
                                 <h3 class="text-blue">Namiddagsessies</h3>
                                 <p>
-                                    Lokale stakeholders zullen hun plan van aanpak pitchen voor een toekomstig probleem voor Gent: <b>klimaat, onderwijs, superdiversiteit, efficiënt gebruik van ruimte, wonen, zorg, sociale cohesie, participatie</b>… komen aan bod. In kleinere groepen gaan we interactief, en onder begeleiding van experts, aan de slag om zelf met oplossingen te komen.
+                                    In de namiddag gaan we, in lijn met de filosofie van de City of People, samen aan de slag. Lokale stakeholders zullen ons via korte pitches provoceren rond de thema’s Open Governance en ICT as commons; Innovatie en omgaan met onzekerheid; Klimaat, biomimicry & systeemdenken; Ethiek en Privacy; Gedragsverandering via technologie. In kleinere groepen gaan we interactief, en onder begeleiding van experts, aan de slag om zelf met projecten en oplossingen op komende uitdagingen te komen.
                                 </p>
                                 <h3 class="text-blue">Natraject</h3>
                                 <p>
