Links Aral en KFC

--- a/index.html
+++ b/index.html
@@ -235,6 +235,9 @@
                                         <p>
                                             <b>Aral Balkan</b> is ethisch ontwerper, cyborg-activist en wereldburger. Als professioneel spreker (oa. TED, The Next Web) reist hij de wereld rond. Balkan streeft naar het creëren van onafhankelijke en democratische technologie; met respect voor privacy en het gebruik van iemands persoonlijke data. Hij waarschuwt voor het ‘Silicon Valley-business model’ en pleit voor doorgedreven decentrale en ‘Open Source’-alternatieven.
                                         </p>
+                                        <p><a href="https://twitter.com/aral">Twitter</a></p>
+                                        <p><a href="https://ar.al/">Website</a></p>
+                                        <p><a href="https://www.youtube.com/watch?v=upu0gwGi4FE ">Video</a></p>
                                     </div>
                                     <div class="modal-footer">
                                     </div>
@@ -252,6 +255,8 @@
                                         <p>
                                             Karl-Filip Coenegrachts is Strategisch Coördinator voor Groep Gent, trekker van de visie ‘Ghent, City of People’ en van het Ghent Living Lab. Als Strategisch Coördinator is Coenegrachts verantwoordelijke voor de langetermijnstrategie voor Groep Gent, de smart city-strategie, data-en informatiemanagement, internationale relaties en beleidsparticipatie. Coenegrachts vertegenwoordigt Gent als voorzitter van het Executive Committee van het Eurocities-netwerk.
                                         </p>
+                                        <p><a href="https://www.linkedin.com/in/karlfilip/">LinkedIn</a></p>
+                                        <p><a href="http://wattfactory.be/news/ghent-a-true-city-of-people ">Blogpost</a></p>
                                     </div>
                                     <div class="modal-footer">
                                     </div>
