Hajer update modal

--- a/index.html
+++ b/index.html
@@ -292,10 +292,10 @@
                                     </div>
                                     <div class="modal-body">
                                         <p>
-                                            Dr. Maarten Hajer is politicoloog en hoogleraar Urban Futures aan de Universiteit van Utrecht. Hij is de auteur van het boek ‘Smart about Cities’ waarin hij pleit voor een ‘smart urbanism’: een systeem waarin steden wereldwijd genetwerkt zijn om samen te experimenteren, te leren en actie te ondernemen. Prof. Hajer pleit voor het gebruik van technologie voor sociale innovatie van onderuit, als reactie op het adopteren van technologie die ons opgedrongen wordt door grote bedrijven.
+                                            Prof. Maarten Hajer is bijzonder hoogleraar ‘Urban Futures’ (Universiteit Utrecht) en directeur van de Urban Futures Studio. Hajer studeerde Politieke Wetenschappen en Stads- en Regionale Planning aan de Universiteit Amsterdam. Hij behaalde een doctoraat in Politieke Wetenschappen aan de Universiteit van Oxford. In 2016 was Hajer hoofdcurator van ‘The Next Economy’, voor de Internationale Architectuur Biennale Rotterdam.
                                         </p>
                                         <p>
-                                            Prof. Hajer sluit het voormiddaggedeelte af met een presentatie over de toekomst van steden, waarin hij ook zal reageren op de boodschap van de vorige sprekers.
+                                            Hajer is de auteur van verschillende boeken, waaronder ‘Smart about Cities – Visualizing the Challenge of 21st Century Urbanism’. In 2017 lanceerde hij met Urban Futures Studio een wedstrijd rond ‘Post-fossiele steden’. Volgend jaar is Maarten Hajer hoofdcurator van de tentoonstelling ‘Places of Hope’ in Leeuwarden.
                                         </p>
                                     </div>
                                     <div class="modal-footer">
