Added jpgs and new copy for programme

--- a/index.html
+++ b/index.html
@@ -168,39 +168,45 @@
             <div class="container">
                     <h2 class="text-center text-blue">PROGRAMMA</h2>
                     <div class="row info-cards extra-spacing">
-                        <div class="col-md-4 col-xs-12">
+                        <!--<div class="col-md-4 col-xs-12">
                             <div class="card-white">
-                                <h3 class="text-blue">Aral Balkan</h3>
+                                <h3 class="text-blue">Foreplay?</h3>
                                 <p>
-                                    Op Foreplay kijken we in de spiegel. <b>Aral Balkan</b>, cyberactivist en ethisch ondernemer, confronteert ons met hoe we vandaag omgaan met technologie en met onze persoonlijke data. Facebook en Google worden er rijk en slimmer door. Maar willen we dat wel? Hoe zou de toekomst zijn, wanneer we zo verder doen? Wat kan anders?
+                                    Digipolis en Stad Gent nodigen u graag uit voor Foreplay, een conferentie die u laat proeven van technologie in de stad van de toekomst.
+                                    Die uitdaging nemen we zowel letterlijk als figuurlijk.
+                                    We proeven van wat er misschien binnen 20 jaar op ons bord ligt, bijvoorbeeld.
                                 </p>
-                                <h3 class="text-blue">Karl-Filip Coenegrachts</h3>
-                                <p>Tegenwoordig is het modewoord ‘Smart City’. De Gentse visie daarop is die van de ‘City of People’: mensen centraal, niet slimme objecten. Op Foreplay vertelt <b>Karl Filip Coenegrachts</b>, Strategisch Coördinator van Groep Gent, wat die visie voor u betekent; als ambtenaar, ondernemer, academicus en burger. Coenegrachts presenteert er een toekomstvisie die veel verder gaat dan gewoon een slimme stad. 
+                                <p>Maar we proeven ook van technologische evoluties, en van de uitdagingen die ze met zich meebrengen.  
+                                </p>
+                                <p>
+                                    Kortom, voer voor lichaam en geest
+                                </p>
+                            </div>
+                        </div>-->
+                        <div class="col-md-6 col-xs-12">
+                            <div class="card-white">
+                               <h3 class="text-blue">Keynotes</h3>
+                                <p>
+                                   De voormiddag belooft erg boeiend te worden. Vier experts focussen op de rol van technologie, maar doen dat steeds vanuit een bredere blik op mens en samenleving. U hoeft dus geen expert te zijn om te kunnen volgen. 
+                                </p>
+                                <p>
+                                    Moeten we <B>Aral Balkan</B> nog voorstellen? Verwacht u aan een kritische kijk op Facebook en Google. Maar niet zonder dat hij ook alternatieven voorstelt. <b>Karl-Filip Coenegrachts</b> neemt u mee in zijn visie over hoe een slimme stad er in de toekomst moet gaan uitzien. <b>Maya Van Leemput</b> zal het belang van toekomstdenken in de ‘vierde industriële revolutie’ aankaarten. Is alles wat technologie mogelijk maakt ook wenselijk? <b>Prof. Maarten Hajer</b> toont ons hoe we maximaal gebruik kunnen maken van het ‘ecosysteem’ van een stad. 
                                 </p>
                             </div>
                         </div>
-                        <div class="col-md-4 col-xs-12">
+                        <div class="col-md-6 col-xs-12">
                             <div class="card-white">
-                               <h3 class="text-blue">Maya Van Leemput</h3>
+                                <h3 class="text-blue">Co-creatieve sessies</h3>
                                 <p>
-                                   Is alles wat technologie mogelijk maakt ook wenselijk? Wat is onze toegevoegde waarde als mens in een samenleving waarin we steeds meer kunnen uitbesteden aan technologie? <b>Maya Van Leemput</b>, coördinator van Applied Futures Research, toont het belang van toekomstdenken in de ‘vierde industriële revolutie’.
+                                    In de namiddag worden we geprikkeld door vijf korte talks, daarna gaan we zelf aan de slag. 
+                                    <b>Thimo Thoeye</b> geeft in zijn pitch enkele gedachten mee over de rol van Data en ICT in een toekomstscenario waarin ‘Open Governance’ centraal staat. 
+                                    <b>Katrien Verleye</b> wijst op het belang van samenwerking en netwerking in een technologische maatschappij die steeds sneller verandert. <b>Leen Gorissen</b> toont waarom we ons wat meer zouden moeten laten inspireren door hoe de natuur georganiseerd is. <b>Dries De Poorter</b> is speels in de omgang met privacy. Of zit er meer achter zijn kunst? <b>Bram Lievens</b> gaat dieper in op de meerwaarde van het ‘human centered design’. 
                                 </p>
-                                <h3 class="text-blue">prof. Maarten Hajer</h3>
                                 <p>
-                                    <b>Prof. Maarten Hajer</b> verkent met ons mogelijke strategieën om in te pluggen op het ecosysteem van de stad, dat rijk is aan plannen en ideeën. We bedenken pistes om als overheid deel uit te maken van een sterk en dynamisch netwerk van burgers, academia, ondernemers en middenveld. 
+                                    Rond diezelfde vijf thema’s gaan we daarna met jullie in dialoog in kleine groepjes.
                                 </p>
-                            </div>
-                        </div>
-                        <div class="col-md-4 col-xs-12">
-                            <div class="card-white">
-                                <h3 class="text-blue">Namiddagsessies</h3>
                                 <p>
-                                    In de namiddag gaan we, in lijn met de filosofie van de City of People, samen aan de slag. Lokale stakeholders zullen ons via korte pitches provoceren rond de thema’s Open Governance en ICT as commons; Innovatie en omgaan met onzekerheid; Klimaat, biomimicry & systeemdenken; Ethiek en Privacy; Gedragsverandering via technologie. In kleinere groepen gaan we interactief, en onder begeleiding van experts, aan de slag om zelf met projecten en oplossingen op komende uitdagingen te komen.
-                                </p>
-                                <h3 class="text-blue">Natraject</h3>
-                                <p>
-                                    Tijdens de conferentie kan u zich ook kandidaat stellen om mee te stappen in een ‘Future Scripting’-traject, waarbij we via innovatieve gamification-methoden en creatieve oefeningen vier verschillende mogelijke scenario’s over mogelijke toekomsten van Gent zullen schrijven. De oefening wordt begeleid door het team van Maya Van Leemput.
-
+                                   Afsluiten doen we met een netwerkreceptie.
                                 </p>
                             </div>
                         </div>
