--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
                                 <div class="modal-content">
                                     <div class="modal-header">
                                         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                                        <h4 class="modal-title" id="myModalLabel">Marlène de Wouters - Moderatrice Foreplay</h4>
+                                        <h4 class="modal-title" id="myModalLabel">Marlène de Wouters - Moderator Foreplay</h4>
                                     </div>
                                     <div class="modal-body">
                                         <p>
