Copychange to modal Leen Gorissen

--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
                                     </div>
                                     <div class="modal-body">
                                         <p>
-                                            <b>Dr. Leen Gorissen</b> heeft een PhD in biologie. Ze werkt voor VITO (Vlaams Instituut voor Technologisch Onderzoek). Naast onderzoeker en coördinator is Gorissen ook transitie expert, oprichter van de Studio Transitio en auteur van het boek ‘How urban change makers are scaling positive change’. Gorissen adviseert bedrijven en overheden op het vlak van strategie, innovatie en verandering. 
+                                            <b>Dr. Leen Gorissen</b> is !nnovatie Bioloog en oprichter van Studio Transitio. Van 2009-2017 werkte ze als transitie onderzoekscoördinator voor VITO (Vlaams Instituut voor Technologisch Onderzoek) met wie ze samenwerkt aan het boek ‘How urban change makers are scaling positive change’. Gorissen adviseert bedrijven en overheden op het vlak van strategie, innovatie en verandering. 
                                         </p>
                                         <p>In haar pitch vertelt Gorissen hoe ze zich in haar werk laat inspireren door hoe de natuur georganiseerd is: ‘want wat ingenieurs kunnen, kan de natuur beter’. 
                                         </p>
