Added Dutch copy

--- a/coc.html
+++ b/coc.html
@@ -105,7 +105,50 @@
                 <div class="col-xs-10 col-xs-offset-1">
                     <div class="col-xs-12 col-sm-10 col-sm-offset-1 text-big">
                         <h4 class="extra-spacing">
-                           Conference Code of Conduct
+                           Foreplay Gedragscode (English version below)
+                        </h4>
+
+                        <p>
+                            Alle bezoekers, sprekers, partners en medewerkers gaan stilzwijgend akkoord met de volgende gedragscode wanneer zij de conferentie bezoeken. De organisatoren kunnen op elk moment gedurende de conferentie deze gedragscode toepassen. We verwachten de nodige samenwerking van alle deelnemers zodat we een aangenaam verloop van de conferentie kunnen garanderen.  
+                        </p>
+                        <p>
+                            Bij vragen, contacteer gerust <a href="mailto:foresight@digipolis.gent">foresight@digipolis.gent</a>
+
+                        </p>
+                        <p style="margin-top:20px;">
+                            <strong>Korte versie</strong><br/>
+                            Wij vinden het belangrijk om van de conferentie een intimidatie- en discriminatievrije ervaring te maken voor iedereen, ongeacht het geslacht, de genderidentiteit en uiting hiervan, leeftijd, seksuele geaardheid, handicap, lichamelijke verschijning, lichaamsgrootte, ras, etniciteit, religie (of gebrek aan), of technologische keuzes. We tolereren geen enkele vorm van intimidatie van de deelnemers. Voor seksueel getinte taal en beeldvorming is geen plaats, niet via gesprekken, workshops, Twitter of andere online media. Deelnemers die dit niet respecteren, kunnen door de conferentie-organisatoren worden verwijderd van de conferentie. 
+                        </p>
+
+                        <p style="margin-top:20px;">
+                            <strong>De uitgebreide versie</strong><br/>
+                            Digipolis wil van de conferentie een  intimidatie- en discriminatievrije ervaring maken voor alle deelnemers. We tolereren daarbij geen enkele vorm van intimidatie van de deelnemers, onder welke vorm dan ook.  
+                        </p>
+                        <p style="margin-top:20px;">
+                            Dit omvat onder andere, maar is niet beperkt tot, verbale opmerkingen met betrekking tot het geslacht, genderidentiteit of de veruiterlijking hiervan, leeftijd, seksuele geaardheid, handicap, lichamelijke verschijning, lichaamsgrootte, ras, etniciteit, religie (of gebrek daaraan) of technologische keuzes. Ook seksueel getinte beelden in publieke ruimtes, het opzettelijk lastig vallen en pesten, stalken of ongewenst benaderen van personen, ongevraagde fotografie of opnames, voortdurende onderbreking van gesprekken of andere gebeurtenissen, ongepast fysiek contact en ongewenste fysieke aandacht vallen hieronder. Wie dit gedrag stelt zal nadrukkelijk gevraagd worden hiermee te stoppen, met verwijzing naar deze gedragscode.
+                        </p>
+                        <p>
+                            Ook partners en eventuele sponsors en standhouders zijn onderhevig aan deze gedragscode. In het bijzonder mogen partners geen seksuele beelden, activiteiten of ander materiaal gebruiken. 
+                        </p>
+                        <p>
+                            Indien een deelnemer toch hinderlijk gedrag vertoont,, kunnen de organisatoren alle maatregelen nemen die zij gepast achten; met inbegrip van het waarschuwen van de dader, tot het effectief verwijderen van de conferentie zonder terugbetaling of compensatie. Als u wordt lastig gevallen, verneemt dat iemand anders wordt lastig gevallen, of andere bezorgdheden heeft, neem dan onmiddellijk contact op met een medewerker van de Foreplay conferentie. Medewerkers kunnen geïdentificeerd worden aan de t-shirts die zij zullen dragen gedurende de conferentie. Zij helpen graag alle deelnemers bij het contacteren van de beveiliging of van de lokale politie, in het begeleiden van deelnemers op de conferentiesite, of bij het assisteren van bezoekers die zich geïntimideerd of onveilig voelen. Wij waarderen uw aanwezigheid ten zeerste. We verwachten dat deelnemers deze regels strikt volgen in alle zalen, workshopruimtes en sociale evenementen gerelateerd aan de conferentie.
+                        </p>
+                        <p>
+                            Deze gedragscode is gebaseerd op de universele <a href="http://confcodeofconduct.com/">Conference Code of Conduct</a> die tevens beschikbaar is via de <a href="https://creativecommons.org/licenses/by/3.0/deed.en_US">CC-BY 3.0 Unported</a> licentie.
+
+                        </p>
+                        <br>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-10 col-xs-offset-1">
+                    <div class="col-xs-12 col-sm-10 col-sm-offset-1 text-big">
+                        <h4 class="extra-spacing">
+                           Foreplay Code of Conduct
                         </h4>
 
                         <p>
