added media page

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <li><a href="#site-info">SPREKERS</a></li>
                     <li><a href="#site-programme">AGENDA</a></li>
                     <!--<li><a href="faq.html">CODE OF CONDUCT</a></li>-->
-                    <li><a class="cta" href="https://foreplaygent.eventbrite.nl">INSCHRIJVEN</a></li>
+                    <li><a class="cta" href="http://foreplay.gent/media.html">MEDIA</a></li>
                 </ul>
             </div>
             <!--/.nav-collapse -->
@@ -141,7 +141,7 @@
                             </p>
                             <br>
                             <p class="extra-spacing">
-                                <strong><a href="https://foreplaygent.eventbrite.nl" class="ctabanner">registreer hier</a></strong>
+                                <strong><a href="http://foreplay.gent/media.html" class="ctabanner">Herbekijk hier</a></strong>
                             </p>
                             <br>
                         </div>
@@ -649,7 +649,7 @@
                             <p class="text-center">Registratie is gratis maar verplicht.</p>
                             <br>
                             <br>
-                            <strong><a class="cta2" href="https://foreplaygent.eventbrite.nl" target="_blank">SCHRIJF JE NU IN!</a></strong>
+                            <strong><a class="cta2" href="http://foreplay.gent/media.html" target="_blank">HERBEKIJK HIER</a></strong>
                             <br><br>
                         </div>
                     </div>
